--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 
       <div class="button-container">
         <!-- TODO: Hier neue Buttons erstellen. -->
+        <button type="button" data-click="aufgabe06">Aufgabe 6</button>
+        <button type="button" data-click="aufgabe05">Augabe 5</button>
+        <button type="button" data-click="aufgabeo4">Aufgabe 4</button>
+        <button type="button" data-click="aufgabe03">Aufgabe 3</button>
+        <button type="button" data-click="aufgabe02">Aufgabe 2</button>
         <button type="button" data-click="aufgabe01">Aufgabe 1</button>
       </div>
 
