--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 
       <div class="button-container">
         <!-- TODO: Hier neue Buttons erstellen. -->
+        <button type="button" data-click="aufgabe31">Aufgabe 31</button>
+        <button type="button" data-click="aufgabe30">Aufgabe 30</button>
+        <button type="button" data-click="aufgabe29">Aufgabe 29</button>
         <button type="button" data-click="aufgabe28">Aufgabe 28</button>
         <button type="button" data-click="aufgabe27">Aufgabe 27</button>
         <button type="button" data-click="aufgabe26">Aufgabe 26</button>
@@ -55,6 +58,10 @@
       <section>
         <h2>Sortierverfahren</h2>
         <!-- TODO: Schreiben Sie hier zu Sortierverfahren-->
+        Bubblesort: ist ein einfaches Sortierverfahren bei dem eine Liste
+        sortiert wird. Man vergleicht immer die benachbarten Zeichen und tauscht
+        sie aus wenn die Reihenfolge falsch ist. Dabei geht die Liste von links
+        nach rechts machen.
       </section>
     </div>
 
