--- a/index.html
+++ b/index.html
@@ -58,10 +58,30 @@
       <section>
         <h2>Sortierverfahren</h2>
         <!-- TODO: Schreiben Sie hier zu Sortierverfahren-->
-        Bubblesort: ist ein einfaches Sortierverfahren bei dem eine Liste
-        sortiert wird. Man vergleicht immer die benachbarten Zeichen und tauscht
-        sie aus wenn die Reihenfolge falsch ist. Dabei geht die Liste von links
-        nach rechts machen.
+        <h3>Bubblesort</h3>
+        <p>
+          Bubblesort ist ein Sortierverfahren bei dem eine Liste sortiert wird.
+          Dabei geht die Liste von links nach rechts machen. Man vergleicht
+          immer die benachbarten Zeichen und tauscht sie aus wenn die
+          Reihenfolge falsch ist also wenn die Elemente grösser als ihr
+          Nachfolger sind. Das Verfahren geht so lange bis die Liste sortiert
+          ist.
+        </p>
+        <h3>Selectionsort</h3>
+        <p>
+          Ist ein Sortierverfahren das eine Liste schritt für Schritt sortiert
+          Man sucht zuerst in der Liste das kleinste Element und dann wird es
+          mit dem ersten Element der Liste vertauscht. Danach wiederholt man
+          dieses Verfahren mit dem Rest der Liste die noch unsortiert ist. Man
+          sucht wieder das kleinste Element und und tauscht es mit dem Element
+          nach dem bereits getauschten Element.
+        </p>
+
+        <h3>Insertionsort</h3>
+        <p>
+          Als erstes besteht der Sortierbereich aus den Elementen mit den 0 bis
+          i-1
+        </p>
       </section>
     </div>
 
