--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
       <div class="button-container">
         <!-- TODO: Hier neue Buttons erstellen. -->
+        <button type="button" data-click="aufgabe32">Aufgabe 32</button>
         <button type="button" data-click="aufgabe31">Aufgabe 31</button>
         <button type="button" data-click="aufgabe30">Aufgabe 30</button>
         <button type="button" data-click="aufgabe29">Aufgabe 29</button>
