--- a/index.html
+++ b/index.html
@@ -22,10 +22,16 @@
 
       <div class="button-container">
         <!-- TODO: Hier neue Buttons erstellen. -->
-        <button type="button" data-click="aufgabe32">Aufgabe 32</button>
-        <button type="button" data-click="aufgabe31">Aufgabe 31</button>
-        <button type="button" data-click="aufgabe30">Aufgabe 30</button>
-        <button type="button" data-click="aufgabe29">Aufgabe 29</button>
+        <button type="button" data-click="bubblesort">Bubble sort</button>
+        <button type="button" data-click="eigeneAufgabe3">
+          Eigene Aufgabe 3
+        </button>
+        <button type="button" data-click="eigeneAufgabe2">
+          Eigene Aufgabe 2
+        </button>
+        <button type="button" data-click="eigeneAufgabe1">
+          Eigene Aufgabe 1
+        </button>
         <button type="button" data-click="aufgabe28">Aufgabe 28</button>
         <button type="button" data-click="aufgabe27">Aufgabe 27</button>
         <button type="button" data-click="aufgabe26">Aufgabe 26</button>
@@ -80,8 +86,12 @@
 
         <h3>Insertionsort</h3>
         <p>
-          Als erstes besteht der Sortierbereich aus den Elementen mit den 0 bis
-          i-1
+          Ist ein Sortierverfahren das ein Elemnt eins nach dem anderen in eine
+          Teilliste einfügt die bereits sortiet ist.Man nimmt das aktulle Elemnt
+          das man sortieren will und man fügt es an richtige Position in der
+          Teilliste ein und das macht man in dem das Element mit den bereits
+          sortierten Elementen verglichen wird. Das widerholt man solamge bis
+          man die komplette Liste sortiert hat.
         </p>
       </section>
     </div>
