--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
       <div class="button-container">
         <!-- TODO: Hier neue Buttons erstellen. -->
+        <button type="button" data-click="Bucketsort">Bucketsort</button>
+        <button type="button" data-click="Insertionsort">Insertionsort</button>
         <button type="button" data-click="bubblesort">Bubble sort</button>
         <button type="button" data-click="eigeneAufgabe3">
           Eigene Aufgabe 3
@@ -74,15 +76,8 @@
           Nachfolger sind. Das Verfahren geht so lange bis die Liste sortiert
           ist.
         </p>
-        <h3>Selectionsort</h3>
-        <p>
-          Ist ein Sortierverfahren das eine Liste schritt für Schritt sortiert
-          Man sucht zuerst in der Liste das kleinste Element und dann wird es
-          mit dem ersten Element der Liste vertauscht. Danach wiederholt man
-          dieses Verfahren mit dem Rest der Liste die noch unsortiert ist. Man
-          sucht wieder das kleinste Element und und tauscht es mit dem Element
-          nach dem bereits getauschten Element.
-        </p>
+        <h3>Bucketsort</h3>
+        <p></p>
 
         <h3>Insertionsort</h3>
         <p>
