--- a/index.html
+++ b/index.html
@@ -77,7 +77,18 @@
           ist.
         </p>
         <h3>Bucketsort</h3>
-        <p></p>
+        <p>
+          Bucket Sort ist ein nicht-vergleichbasierter Sortieralgorithmus, der
+          eine Liste von gleichmäßig verteilten Elementen in linearer Zeit
+          sortiert. Dieses Verfahren erfolgt dabei in drei Schritten: 1. Zuerst
+          werden sogeanannte "Buckets" (Eimer) erstellt, in denen die Elemente
+          der unsortierten Liste verteilt und abgelegt werden. 2. Jeder dieser
+          Buckets wird dann mit einem anderen Sortierverfahren sortiert, wie zb.
+          dem obigen Insertion Sort 3.Nachdem alle Buckets individuell sortiert
+          wurden, werden die Elemente aus den Buckets in der richtigen
+          Reihenfolge zusammengefügt, um eine neue, sortierte Liste zu
+          erstellen.
+        </p>
 
         <h3>Insertionsort</h3>
         <p>
